--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -5,6 +5,10 @@ backend:
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
+media_library:
+  name: uploadcare
+  config:
+    publicKey: your_public_key
 
 collections:
   - name: "blog"
