--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -18,3 +18,20 @@ collections:
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
+  - name: "pages"
+
+    label: "Pages"
+
+    folder: "src"
+
+    create: true
+
+    slug: "{{slug}}"
+
+    fields: 
+
+      - { label: "Title", name: "title", widget: "string" }
+
+      - { label: "Layout", name: "layout", widget: "list", default: ["base"] }
+
+      - { label: "Body", name: "body", widget: "markdown" }
