Added form to create pages and removed time

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
   name: git-gateway
   branch: main 
-  publish_mode: editorial_workflow
   site_url: https://vcnt.eu
   logo_url: https://vcnt.eu/images/logo.png
 media_folder: "public/images/uploads"
@@ -15,7 +14,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: 
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Date", name: "date", widget: "date" }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
