--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,8 +7,11 @@ media_folder: "public/images/uploads/2023"
 public_folder: "/images/uploads/2023"
 
 editor:
+  preview: true
 
-  preview:
+
+
+
 
     stylesheets:
 
