--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,8 +4,8 @@ backend:
   site_url: https://vcnt.eu
   logo_url: https://vcnt.eu/images/logo.png
 
-media_folder: "public/images/uploads/2023"
-public_folder: "/images/uploads/2023"
+media_folder: "/src/images/uploads/2023"
+public_folder: "public/images/uploads/2023"
 
 editor:
   preview: true
@@ -24,19 +24,26 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+
       - label: "Date"
         name: "date"
         widget: "date"
+
       - name: "previewImage"
         label: "Preview Image"
         widget: "image"
+
       - name: "description"
         label: "Description"
         widget: "text"
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
+
       - name: "postUrl"
         label: "Post URL"
         widget: "string"
         default: "{{ page.url | url }}"
+
+      - label: "Body"
+        name: "body"
+        widget: "markdown"
+
+ 
