--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -8,8 +8,8 @@ backend:
   site_url: https://vcnt.eu
   logo_url: https://vcnt.eu/images/logo.png
 
-media_folder: "/src/images/uploads/2023"
-public_folder: "/public/images/uploads/2023"
+media_folder: "src/images/posts/2023"
+public_folder: "/images/posts/2023"
 
 editor:
   preview: true
@@ -25,29 +25,10 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: 
-      - label: "Title"
-        name: "title"
-        widget: "string"
-
-      - label: "Date"
-        name: "date"
-        widget: "date"
-
-      - name: "previewImage"
-        label: "Preview Image"
-        widget: "image"
-
-      - name: "description"
-        label: "Description"
-        widget: "text"
-
-      - name: "postUrl"
-        label: "Post URL"
-        widget: "string"
-        default: "{{ page.url | url }}"
-
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
-
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "date" }
+      - { label: "Preview Image", name: "previewImage", widget: "image", required: false }
+      - { label: "Description", name: "description", widget: "text", required: false }
+      - { label: "Post URL", name: "postUrl", widget: "string", default: "{{ page.url | url }}" }
+      - { label: "Body", name: "body", widget: "markdown" }
  
