--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 site:
   stitle: vcnt.eu
-  baseUrl: https://example.com
+  baseUrl: https://vcnt.eu
 
 backend:
   name: git-gateway
@@ -8,8 +8,8 @@ backend:
   site_url: https://vcnt.eu
   logo_url: https://vcnt.eu/images/logo.png
 
-media_folder: "src/images/posts/2023"
-public_folder: "/images/posts/2023"
+media_folder: "src/images/posts"
+public_folder: "/images/posts"
 
 editor:
   preview: true
@@ -27,7 +27,7 @@ collections:
     fields: 
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Date", name: "date", widget: "date" }
-      - { label: "Preview Image", name: "previewImage", widget: "image", required: false }
+     - { label: "Preview Image", name: "previewImage", widget: "image", value_type: "string", default: "", media_library: { config: { fileMeta: [{ media_folder: "src/images/posts", public_folder: "/images/posts" }], allow_multiple: false }, enabled: true }, hint: "Enter the path to the preview image. Make sure to remove 'src/' from the path.", required: false, value_template: '{{ value | transformMediaPath }}' }
       - { label: "Description", name: "description", widget: "text", required: false }
       - { label: "Post URL", name: "postUrl", widget: "string", default: "{{ page.url | url }}" }
       - { label: "Body", name: "body", widget: "markdown" }
