--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -15,8 +15,8 @@ editor:
   preview: true
 
 stylesheets:
-  - /css/main.css
-  - /css/syntax.css
+  - src/css/main.css
+  - src/css/syntax.css
 
 collections:
   
