--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,11 +1,5 @@
-  site_url: https://vcnt.eu
-  display_url: https://vcnt.eu
-
-site:
-  stitle: vcnt.eu
-  baseUrl: https://vcnt.eu
-  
-  
+ 
+logo_url: /images/banner.svg
 backend:
   name: git-gateway
   branch: main 
